--- a/style.css
+++ b/style.css
@@ -1,91 +1,192 @@
 @import url("https://fonts.googleapis.com/css2?family=Manrope:wght@400;700&display=swap");
 
 /*===========Basic Styling==========*/
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+
+:root {
+  --primary: #ffffff;
+  --secondary: #000000;
+  --header: 4rem;
 }
-html{
-    scroll-behavior: smooth;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
+  outline: none;
+  color: var(--secondary);
+  font-family: "Manrope", sans-serif;
 }
-body{
-    font-family: 'Manrope', sans-serif;
+html {
+  scroll-behavior: smooth;
 }
-li{
-    list-style: none;
+main {
+  display: flex;
 }
-a{
-    text-decoration: none;
-    color: #000000;
-    font-size: 1.1rem;
+.account_wrapper,
+.preference_wrapper {
+  display: none;
 }
-main{
-    display: flex;
+.block {
+  display: block;
 }
 /*=============Dashboard==============*/
-.dashboard_container{
-    width: 250px;
-    height: 100%;
-    padding: 1rem;
-    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+.side_container {
+  background-color: var(--primary);
+  position: fixed;
+  top: 0%;
+  left: 0%;
+  z-index: 100;
 }
-.branding{
-    display: flex;
+.container {
+  width: 250px;
+  height: 100vh;
+  padding: 1rem;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
-.logo_branding{
-    padding-left: 1.5rem;
-    font-size: 1.5rem;
-    font-weight: 700;
+.branding {
+  display: flex;
 }
-.container_links{
-    margin-top:1.5rem;
-    display: flex;
-    align-items: center;    
+.logo_branding {
+  padding-left: 1.6rem;
+  font-size: 1.5rem;
+  font-weight: 700;
 }
-.container_links ul li{
-    padding-top:1.2rem;
-    position: relative;
+.container_links {
+  margin-top: 1.5rem;
+  align-items: center;
 }
-.container_links ul li i{
-    width: 1vw;
-    opacity: 20%;
+.container_links ul li {
+  padding-top: 1.2rem;
+  position: relative;
 }
-.container_links ul li a{
-    padding-left: 1.5rem;
+.container_links ul li i {
+  font-size: 1.1rem;
+  width: 1vw;
+  opacity: 20%;
 }
-.active{
-    font-weight: 700;
+.container_links ul li a {
+  padding-left: 1.3rem;
 }
-.dropdown{
-    display: block;
-    padding-left:1rem;
-    padding-bottom: 1rem;
+.active {
+  font-weight: 700;
 }
-.dropdown_menu{
-    padding-top: 2rem;
+.dropdown {
+  padding-left: 1rem;
+  padding-bottom: 1rem;
+}
+.dropdown_menu {
+  padding-top: 3rem;
 }
 .dropdown li {
-    line-height: 0.5rem;
+  line-height: 0.7rem;
 }
-.dropdown li a{
-    font-size:0.9rem;
-    opacity: 60%;
-    font-weight: 400;
+.dropdown li a {
+  font-size: 0.9rem;
+  opacity: 60%;
+  font-weight: 400;
 }
-.dropdown_arrow{
-    position: absolute;
-    right: -40px;
-    top: 25px;
-    cursor: pointer;
+.account_arrow,
+.preference_arrow {
+  position: absolute;
+  right: 2px;
+  top: 25px;
+  transform: rotate(0deg);
+  transition: 0.4s ease-in-out;
+}
+.dropdown_rotate {
+  transform: rotate(180deg);
+  transition: 0.4s ease-in-out;
 }
 
 /*==============SearchBar Block==============*/
-.searchbar_content{
-    background-color: antiquewhite;
-    width: 100vw;
-    height: 10vh;
-    display: flex;
-    justify-content: space-between;
-    align-items:center;
+
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  margin-left: 250px;
+}
+.searchbar{
+  position: fixed;
+  top: 0%;
+  left: 250px;
+  width: calc(100% - 250px);
+  z-index: 100;
+}
+.searchBar_content {
+  display: flex;
+  width: 100%;
+  height: var(--header);
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 0.5rem 0 1.3rem;
+  background-color: white;
+  box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;
+}
+
+.searchbar_left {
+  width: 50%;
+  height: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 0.5rem;
+}
+.searchbar_left input {
+  width: 100%;
+  height: 100%;
+  background: transparent;
+  border: none;
+}
+.searchbar_left input[type="text"] {
+  font-family: "Manrope", sans-serif;
+  font-size: 1rem;
+  opacity: 0.3;
+  padding-left: 1rem;
+}
+.searchbar_left i {
+  font-size: 1.3rem;
+  opacity: 0.3;
+}
+.searchBar_right {
+  display: flex;
+  align-items: center;
+}
+
+.searchBar_right i {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #eff3f9;
+  opacity: 0.5;
+  font-size: 0.8rem;
+  padding: 0.4rem 0.5rem;
+  position: relative;
+  border-radius: 3px;
+  cursor: pointer;
+}
+.searchBar_right i::after {
+  content: "";
+  background-color: #f44336;
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  position: absolute;
+  top: -7%;
+  right: -4%;
+}
+.userImg {
+  padding-left: 0.5rem;
+  cursor: pointer;
+}
+.hero_img {
+  width: 100%;
+  height: 100vh;
+  margin-top: var(--header);
+}
+
+.hero_img img {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: cover;
 }
