--- a/style.css
+++ b/style.css
@@ -27,8 +27,38 @@ main {
 .preference_wrapper {
   display: none;
 }
+.hidden {
+  display: none !important;
+  transition: all;
+}
 .block {
   display: block;
+  transition: all;
+}
+
+/* Scrollbar Styling */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #ebebeb;
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+  background: #9f9191;
+  opacity: 0.5;
+}
+
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration {
+  -webkit-appearance: none;
 }
 /*=============Dashboard==============*/
 .side_container {
@@ -74,8 +104,22 @@ main {
 .dropdown {
   padding-left: 1rem;
   padding-bottom: 1rem;
+  position: relative;
+  transition: all 4s;
 }
-.dropdown_menu {
+.dropdown::before {
+  content: "";
+  width: 91px;
+  height: 1px;
+  background-color: #000000;
+  opacity: 20%;
+  position: absolute;
+  left: -38px;
+  top: 56px;
+  transform: rotate(90deg);
+  transition:all 4s;
+}
+.dropdown .dropdown_menu {
   padding-top: 3rem;
 }
 .dropdown li {
@@ -106,7 +150,7 @@ main {
   flex-direction: column;
   margin-left: 250px;
 }
-.searchbar{
+.searchbar {
   position: fixed;
   top: 0%;
   left: 250px;
@@ -138,7 +182,7 @@ main {
   background: transparent;
   border: none;
 }
-.searchbar_left input[type="text"] {
+.searchbar_left input[type="search"] {
   font-family: "Manrope", sans-serif;
   font-size: 1rem;
   opacity: 0.3;
@@ -147,7 +191,13 @@ main {
 .searchbar_left i {
   font-size: 1.3rem;
   opacity: 0.3;
+  transition: 2s ease-in-out;
+  cursor: pointer;
 }
+.fa-messages:before {
+  content: "\f4b6";
+}
+
 .searchBar_right {
   display: flex;
   align-items: center;
@@ -159,7 +209,7 @@ main {
   align-items: center;
   background-color: #eff3f9;
   opacity: 0.5;
-  font-size: 0.8rem;
+  font-size: 0.9rem;
   padding: 0.4rem 0.5rem;
   position: relative;
   border-radius: 3px;
@@ -189,4 +239,73 @@ main {
   max-width: 100%;
   max-height: 100%;
   object-fit: cover;
+}
+
+/*======User Data Section =====*/
+.user_wrapper {
+  margin-top: 6rem;
+  padding: 0 3rem;
+  display: grid;
+  grid-template-columns: 750px 250px;
+}
+.user_section {
+  display: grid;
+  grid-template-columns: auto auto;
+}
+.userOption {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.userProfile {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.trackBtn {
+  margin-right: 2rem;
+  background: transparent;
+  padding: 0.4rem 1rem;
+  border: 1px solid #ff6059;
+  color: #ff6059;
+  cursor: pointer;
+}
+.user_container h1,
+.userOption h1 {
+  font-weight: 700;
+  opacity: 50%;
+  margin-bottom: 2rem;
+}
+.userOption ul li {
+  padding-bottom: 2rem;
+  font-weight: 700;
+  font-size: 1rem;
+}
+.userProfile {
+  padding-bottom: 2rem;
+}
+.user {
+  display: flex;
+}
+.user .userlogo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 3rem;
+  height: 3rem;
+  padding: 0%;
+  font-size: 1.3rem;
+  font-weight: 700;
+  color: var(--primary);
+}
+.user div {
+  padding-left: 1rem;
+}
+.userName {
+  font-weight: bold;
+  font-size: 1rem;
+}
+.user_username {
+  font-size: 0.9rem;
+  opacity: 50%;
 }
